--- a/custom.css
+++ b/custom.css
@@ -1,4 +1,4 @@
 .editor-group-watermark > .letterpress{
-  background-image: url("https://github.com/Aikoyori/ProgrammingVTuberLogos/blob/main/VSCode/VSCode-Thick.png") !important;
+  background-image: url("https://raw.githubusercontent.com/Aikoyori/ProgrammingVTuberLogos/main/VSCode/VSCode-Thick.png") !important;
   opacity: .75;
 }
